# Rakuten-Travel-App

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: config.py
backend/map/: geo_utils.py  tile_cache.py  tile_manager.py
backend/search/: nominatim.py
frontend/ui/: main.slint
frontend/ui/components/: attribution.slint  map_view.slint  search_bar.slint
