[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rakuten-travel"
version = "0.1.0"
description = "Japan accommodation map explorer powered by OpenStreetMap and Rakuten Travel API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "slint>=1.9.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.scripts]
rakuten-travel = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]
